...
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/image_margin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_object_txt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_start_margin"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meeting_object_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Meeting Object"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>
...
                android:ems="8"
                android:hint="DD/MM/YYYY"
                android:inputType="date"/>
        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/date_picker_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button"
                android:enabled="true"
                android:layout_marginLeft="@dimen/button_margin"
                android:text="GET DATE"

                />

        </LinearLayout>

        <LinearLayout
...
                android:layout_height="wrap_content"
                android:hint="Entrant Mail"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/meeting_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_marginTop="@dimen/text_input_start_margin"
            android:layout_gravity="center"
            app:cornerRadius="20dp"
            android:enabled="false"
            android:text="Add"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
