<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meeting_interface"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".meeting_list.ListMeetingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/meeting_appbar"
...
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent"
        >
        
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/meeting_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:layout_weight="1"
            app:title="@string/app_name">
...
        </androidx.appcompat.widget.Toolbar>
        
        
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_meeting_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/linear_layout_margin"
        android:src="@drawable/ic_baseline_add_white_24"
        android:backgroundTint="#d80911"
...
