<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/toolbar_filter_list_btn"
        android:icon="@drawable/ic_baseline_filter_list_24"
        app:showAsAction="ifRoom|withText"
        android:title="@string/filter">
        <menu>
            <item
                android:id="@+id/sub_home"
                android:title="HOME"/>
            <item
                android:id="@+id/sub_date"
...
